# PhasePhyto

./: .Rhistory  .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  GUIDE.md  Makefile  PAPER.md  Project_Summary.md  README.md  RESULTS.md  ROADMAP.md  amemory.md  docker-compose.yml  instructions.md  pyproject.toml  streamlit_app.py
Docs/: Group25_Project_Proposal.docx  Phase1.md
configs/: apple_overlap_plantdoc.yaml  apple_overlap_plantdoc_rebalanced.yaml  apple_overlap_plantdoc_rebalanced_softer.yaml  apple_overlap_pp2021.yaml  banana_leaf.yaml  base.yaml  histology.yaml  plant_disease.yaml  plant_pathology_2021.yaml  pollen.yaml  rice_leaf.yaml  rocole.yaml  wood.yaml
hf_assets/: demo_samples.json
notebooks/: PhasePhyto_Apple_Overlap_Colab.ipynb  PhasePhyto_Apple_Overlap_Fixes_Colab.ipynb  PhasePhyto_Apple_Overlap_Fixes_v2_Colab.ipynb  PhasePhyto_Batch_Inference.ipynb  PhasePhyto_Colab.ipynb  PhasePhyto_Download_Data_To_Drive.ipynb  PhasePhyto_Inspect_00_Index.ipynb  PhasePhyto_Inspect_01_Run_Overview.ipynb  PhasePhyto_Inspect_02_Metrics.ipynb  PhasePhyto_Inspect_03_Plots.ipynb  PhasePhyto_Inspect_04_Reports.ipynb  PhasePhyto_Inspect_Run_Results.ipynb  README.md
phasephyto/: __init__.py  batch_inference_config.py  demo_compat.py  demo_runtime.py  evaluate.py  evaluate_baseline.py  inference.py  train.py  train_baseline.py
scripts/: audit_class_overlap.py  benchmark.py  download_data.py  prepare_hf_space_assets.py  prepare_overlap_datasets.py  publish_hf_space.py
tests/: test_additional_datasets.py  test_batch_inference_config.py  (+7 more)
(+51 files in other folders)
